--- a/frontend/templates/frontend/pages/index.html
+++ b/frontend/templates/frontend/pages/index.html
@@ -130,10 +130,40 @@
         }
       }
 
+      .jarallax .jarallax-img {
+        opacity: 0.5!important;
+      }
+
       .header-logo {
         width: 100%;
         max-width: 170px;
       }
+
+@media all and (min-width: 992px) {
+  .concentric-circle {
+    background-image: url("{% static 'frontend/assets/img/decorations/concentric-02.png'%}");
+    background-position: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    position: relative;
+    width: 100%;
+    max-width: 358px;
+    height: 350px;
+    z-index: 99999;
+    margin: 0 auto;
+    opacity: 0.1;
+    
+   }
+}
+.navbar-nav .nav-link {
+  color: #fff!important;
+}
+
+footer {
+  padding: 6rem 0rem!important;
+}
+
+
     </style>
 
     <!-- Page loading scripts -->
@@ -196,10 +226,10 @@
             <div class="form-check form-switch mode-switch order-lg-2 me-3 me-lg-4 ms-auto" data-bs-toggle="mode">
               <input class="form-check-input" type="checkbox" id="theme-mode" />
               <label class="form-check-label" for="theme-mode">
-                <i class="ai-sun fs-lg"></i>
+                {% comment %} <i class="ai-sun fs-lg"></i> {% endcomment %}
               </label>
               <label class="form-check-label" for="theme-mode">
-                <i class="ai-moon fs-lg"></i>
+                {% comment %} <i class="ai-moon fs-lg"></i> {% endcomment %}
               </label>
             </div>
 
@@ -210,7 +240,7 @@
               rel="noopener"
             >
               <i class="ai-cart fs-xl me-2 ms-n1"></i>
-              Buy now
+              Join
             </a>
 
             <!-- Mobile menu toggler (Hamburger) -->
@@ -239,7 +269,6 @@
               </ul>
               <div class="d-sm-none p-3 mt-n3">
                 <a class="btn btn-primary w-100 rounded-pill mb-1" href="https://themes.getbootstrap.com/product/around-multipurpose-template-ui-kit/" target="_blank" rel="noopener">
-                  <i class="ai-cart fs-xl me-2 ms-n1"></i>
                   Buy now
                 </a>
               </div>
@@ -251,17 +280,19 @@
       <!-- Hero section -->
       <section class="position-relative bg-dark pt-lg-4 pt-xl-5">
         <div class="jarallax position-absolute top-0 start-0 w-100 h-100" data-jarallax data-speed="0.4">
-          <div class="jarallax-img" style="background-image: url({% static 'frontend/assets/img/landing/saas-4/hero-bg-pattern.png'%})"></div>
+          {% comment %} <div class="jarallax-img" style="background-image: url({% static 'frontend/assets/img/landing/saas-4/hero-bg-pattern.png'%})"></div> {% endcomment %}
+          <div class="jarallax-img" style="background-image: url({% static 'frontend/assets/img/backgrounds/metallic-lines.jpeg'%})"></div>
+
         </div>
         <div class="container position-relative z-2 pt-2 pt-sm-4 pt-md-5">
           <div class="row justify-content-center pt-5">
             <div class="col-lg-9 col-xl-8 text-center pt-5 mt-1">
               <a href="#" class="d-inline-flex align-items-center fs-sm fw-semibold text-decoration-none bg-warning bg-opacity-10 text-warning rounded-pill py-2 px-3">
-                <span class="fw-semibold lh-sm">New Around v2.0</span>
+                <span class="fw-semibold lh-sm">Learn about our AI solutions for your business. </span>
                 <i class="ai-arrow-right fs-lg ms-2 me-n1"></i>
               </a>
-              <h1 class="display-4 text-white pt-3 mt-3 mb-4">Powerful AI models to serve your business needs</h1>
-              <p class="text-white opacity-70 fs-xl">Our robust platform is designed to handle large volumes of data and processing power, making it perfect for businesses of all sizes.</p>
+              <h1 class="display-4 text-white pt-3 mt-3 mb-4">Our engineers build magical software.</h1>
+              <p class="text-white opacity-70 fs-xl">Our expert team of data engineers, software engineers, and designers boasts impressive backgrounds from top Fortune 500 companies, ready to deliver exceptional solutions.</p>
             </div>
           </div>
         </div>
@@ -274,6 +305,12 @@
             </svg>
           </div>
         </div>
+      </section>
+      <section class="container position-relative z-3">
+        <div class="d-none d-lg-block" style="margin-top: -285px"></div>
+        <div class="d-lg-none" style="margin-top: -150px"></div>
+        <div class="concentric-circle"></div>
+
       </section>
 
       {% comment %} <!-- Categories (Slider) -->
@@ -391,7 +428,7 @@
       </section> {% endcomment %}
 
       <!-- Use cases -->
-      <section class="position-relative overflow-hidden py-5">
+      <section class="position-relative overflow-hidden pb-5 pt-0">
         <span class="position-absolute top-0 start-0 w-100 h-100 d-dark-mode-none" style="background: linear-gradient(141deg, rgba(255, 255, 255, 0.01) 17.3%, #f6f9fc 78.21%)"></span>
         <div
           class="position-absolute top-0 start-0 w-100 h-100 d-none d-dark-mode-block"
@@ -399,7 +436,7 @@
         ></div>
 
         <div class="container position-relative z-2 pt-3 pt-md-4 pt-lg-5 mt-lg-2 mt-xl-4">
-          <h2 class="h1 text-center pb-1 mb-2 d-grid justify-content-start">What you can we build.</h2>
+          <h2 class="h1 text-center pb-1 mb-2 d-grid justify-content-start">Best-in-class designers and engineers</h2>
           <p class="fs-lg pb-lg-2 d-grid justify-content-start">We have some of the most prestine engineers that have professional backgrounds from leading technical companies like Google, Microsoft, Ingram Micro, Stripe, AT&T, Jerry and more. We can build anything you want.</p>
 
           <!-- Use case -->
@@ -916,9 +953,9 @@
 
       <!-- Pricing / Comparison -->
       <section class="position-relative bg-dark pt-2 pt-lg-4 pt-xl-5" style="background: linear-gradient(90deg, #121519 0%, #191c20 51.04%, #121519 100%)">
-        <div class="jarallax position-absolute top-0 start-0 w-100 h-100" data-jarallax data-speed="0.4">
+        {% comment %} <div class="jarallax position-absolute top-0 start-0 w-100 h-100" data-jarallax data-speed="0.4">
           <div class="jarallax-img" style="background-image: url(assets/img/landing/saas-4/pricing-bg-pattern.png)"></div>
-        </div>
+        </div> {% endcomment %}
         <div class="container position-relative z-2 pt-5" data-bs-theme="dark">
           <h2 class="h1 text-center pt-2 pt-sm-3 pb-4 pb-md-5 mb-2 mb-md-0 mb-lg-2">Around vs Custom development</h2>
 
@@ -1109,21 +1146,13 @@
         </div>
         <div class="d-none d-md-block" style="height: 300px"></div>
         <div class="d-md-none" style="height: 260px"></div>
-        <div class="d-flex position-absolute bottom-0 start-0 w-100 overflow-hidden mb-n1" style="color: var(--ar-body-bg)">
-          <div class="position-relative start-50 translate-middle-x flex-shrink-0" style="width: 3774px">
-            <svg width="3774" height="201" viewBox="0 0 3774 201" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0 200.003C0 200.003 1137.52 0.188224 1873.5 0.000134392C2614.84 -0.189325 3774 200.003 3774 200.003H0Z" fill="currentColor" />
-            </svg>
-          </div>
-        </div>
-      </section>
     </main>
 
     <!-- Footer -->
-    <footer class="footer position-relative z-2 pb-3 pb-xl-0">
-      <div class="d-none d-lg-block" style="margin-top: -70px"></div>
+    <footer class="footer position-relative z-2 pb-3 pb-xl-0 py-6">
+      {% comment %} <div class="d-none d-lg-block" style="margin-top: -70px"></div>
       <div class="d-none d-md-block d-lg-none" style="margin-top: -100px"></div>
-      <div class="d-md-none" style="margin-top: -130px"></div>
+      <div class="d-md-none" style="margin-top: -130px"></div> {% endcomment %}
       <div class="container">
         <div class="row">
           <!-- About links -->
@@ -1333,8 +1362,7 @@
         </div>
         <div class="text-sm-center pb-3 py-sm-3 py-md-4 py-xl-5">
           <p class="nav d-block fs-sm mb-0">
-            <span class="text-body">&copy; All rights reserved. Made by </span>
-            <a class="nav-link d-inline-block p-0" href="https://createx.studio/" target="_blank" rel="noopener">Createx Studio</a>
+            <span class="text-body">&copy; 2024 Visual Embassy, LLC. All rights reserved.</span>
           </p>
         </div>
       </div>
