--- a/frontend/templates/frontend/pages/index.html
+++ b/frontend/templates/frontend/pages/index.html
@@ -80,6 +80,11 @@
         color: #84e7d5 !important;
         border-color: #84e7d5 !important;
       }
+
+      .btn-outline-primary {
+        color: #84e7d5 !important;
+        border-color: #84e7d5 !important;
+      }
       
       .hero-title {
         font-family: system-ui !important;
@@ -263,6 +268,10 @@
         color: #fff!important;
       }
 
+      .navbar-toggler-icon, .navbar-toggler-icon::before, .navbar-toggler-icon::after {
+        background-color: #dfdfdf!important;
+      }
+
       /************
       * Media
       *
@@ -276,6 +285,15 @@
         .desktop-md {
           display: block;
         }
+
+        .hero-title-desktop {
+          display: grid;
+
+        }
+
+        .hero-title-mobile {
+          display: none!important;
+        }
       }
       
       @media all and (max-width: 768px) {
@@ -286,6 +304,16 @@
         .desktop-md {
           display: none;
         }
+
+        .hero-title-desktop {
+          display: none!important;
+        }
+
+        .hero-title-mobile {
+          display: grid;
+          text-align: left!important;
+        }
+
       }
       
       @media all and (min-width: 992px) {
@@ -327,8 +355,25 @@
           width: 100%;
         }
 
+        .mobile-100 {
+          height: 100px;
+        }
+
+        .hero-title {
+          line-height: 1.15!important;
+        }
+
+        .main-hero-col {
+          padding-top: 1.5rem!important;
+          margin-bottom: 0.5rem;
+        }
+
         #PricingMobile {
           display: block;
+        }
+
+        .hero-cta-btn{
+          width: 100%;
         }
 
         #PricingDesktop {
@@ -490,7 +535,7 @@
         </div>
         <div class="container position-relative z-2 pt-1 pt-sm-2 pt-md-2">
           <div class="row justify-content-start pt-5">
-            <div class="col-lg-9 col-xl-8 pt-5 mt-1">
+            <div class="main-hero-col col-lg-9 col-xl-8 pt-5 mt-1">
               <a href="#" class="d-inline-flex align-items-center fs-sm fw-semibold text-decoration-none bg-sftgreen cool-green rounded-pill py-2 px-3">
                 <span class="fw-semibold lh-sm cool-green">Learn about our AI solutions for your business </span>
                 <i class="bi bi-arrow-right fs-lg ms-2 me-n1"></i>
@@ -505,9 +550,9 @@
           </div>
         </div>
         <div class="d-none d-lg-block" style="height: 480px"></div>
-        <div class="d-lg-none" style="height: 400px"></div>
+        <div class="d-lg-none" style="height: 326px;"></div>
         <div class="d-flex position-absolute bottom-0 start-0 w-100 overflow-hidden mb-n1" style="color: #131517;">
-          <div class="position-relative start-50 translate-middle-x flex-shrink-0" style="width: 3774px">
+          <div class="mobile-100 position-relative start-50 translate-middle-x flex-shrink-0" style="width: 3774px">
             <svg width="3774" height="201" viewBox="0 0 3774 201" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M0 200.003C0 200.003 1137.52 0.188224 1873.5 0.000134392C2614.84 -0.189325 3774 200.003 3774 200.003H0Z" fill="currentColor" />
             </svg>
@@ -641,7 +686,8 @@
         {% comment %} <div class="position-absolute top-0 start-0 w-100 h-100 d-none d-dark-mode-block" style="background: linear-gradient(141deg, rgba(18, 21, 25, .00) 17.3%, rgba(255, 255, 255, .03) 78.21%);"></div> {% endcomment %}
 
         <div class="container position-relative z-2 pt-3 pt-md-4 pt-lg-5 mt-lg-2 mt-xl-4 text-white">
-          <h2 class="h1 text-center pb-1 mb-2 d-grid justify-content-start text-white">Best-in-class designers and engineers</h2>
+          <h2 class="h1 text-center pb-1 mb-2 justify-content-start text-white hero-title-desktop">Best-in-class designers and engineers</h2>
+          <h2 class="h1 text-center pb-1 mb-2 justify-content-start text-white hero-title-mobile">Best-in-class<br> designers and engineers</h2>
           <p class="fs-lg pb-lg-2 d-grid justify-content-start" style="max-width: 880px;">We have some of the most prestine engineers that have professional backgrounds from leading technology companies like Google, Microsoft, Ingram Micro, Stripe, AT&T, Jerry and more. Basically we can build almost anything.</p>
           <!-- Use case -->
           <div class="row align-items-center justify-content-center py-4 py-md-5 my-1 my-sm-3 my-md-0 my-xl-3">
@@ -701,7 +747,7 @@
                       <p class="fs-lg pb-lg-2 mb-4">
                         Seamlessly integrate natural language processing and machine learning capabilities into your chat bot and provide a personalized experience to your end users.
                       </p>
-                      <a href="#" class="btn btn-outline-primary rounded-pill">
+                      <a href="#" class="btn btn-outline-primary rounded-pill mb-4">
                         Learn more
                         <i class="icon-margin bi bi-chevron-compact-right"></i>
                       </a>
@@ -1380,7 +1426,7 @@
                 <option value="Italiano">Italiano</option>
               </select>
             </div>
-            <div class="d-flex flex-wrap flex-xl-column ps-xl-5 ms-n3 ms-xl-2">
+            <div class="d-flex flex-xl-column ps-xl-5 ms-n3 ms-xl-2">
               <ul class="footer-ul nav flex-xl-column text-white">
                 <li class="nav-item mb-1">
                   <a href="#" class="nav-link py-1 px-xl-0">About us</a>
