--- a/frontend/templates/frontend/pages/index.html
+++ b/frontend/templates/frontend/pages/index.html
@@ -272,6 +272,12 @@
         background-color: #dfdfdf!important;
       }
 
+      .navbar-nav .nav-item,  .navbar-nav li a{
+        color: #f2f2f2!important;
+        font-weight: 500;
+        
+      }
+
       /************
       * Media
       *
