--- a/frontend/templates/frontend/pages/index.html
+++ b/frontend/templates/frontend/pages/index.html
@@ -323,7 +323,7 @@
       }
       
       @media all and (min-width: 992px) {
-        .concentric-circle {
+       /* .concentric-circle {
           background-image: url("{% static 'frontend/assets/img/decorations/concentric-02.png'%}");
           background-position: center;
           background-size: 100%;
@@ -335,7 +335,7 @@
           z-index: 99999;
           margin: 0 auto;
           opacity: 0.1;
-        }
+        }*/
       
         small {
           font-size: 0.785rem !important;
