--- a/frontend/templates/frontend/pages/index.html
+++ b/frontend/templates/frontend/pages/index.html
@@ -342,7 +342,19 @@
         }
       }
 
-      @media all and (max-width: 526px) {
+      @media all and (max-width: 991px) {
+  
+        .navbar .navbar-collapse {
+          border-color:none!important;
+          background-color: #131517!important;
+        }
+
+        .modal-header .btn-close {
+
+        }
+      }
+
+      @media all and (min-width: 526px) {
 
         #PricingMobile {
           display: none;
@@ -359,6 +371,11 @@
           padding: 6rem 0rem;
           align-items: center;
           width: 100%;
+        }
+
+        .modal-content {
+          padding-right: 8px;
+          padding-left: 8px;
         }
 
         .mobile-100 {
