subdomain redirect + portfolio page

--- a/frontend/templates/frontend/pages/index.html
+++ b/frontend/templates/frontend/pages/index.html
@@ -47,6 +47,29 @@
     <!-- Customizer generated styles -->
     <style id="customizer-styles"></style>
 
+
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Visual Embassy",
+        "url": "https://visualembassy.org",
+        "logo": "",
+        "sameAs": [
+          "http://www.facebook.com/visualembassy",
+          "http://www.twitter.com/visualembassy",
+          "http://plus.google.com/visualembassy"
+        ],
+        "description": "Visual Embassy Software Service. We build you software that's magical.",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "email",
+          "areaServed": "US",
+          "availableLanguage": ["English"]
+        }
+      }
+      </script>
+
     <!-- Page loading styles -->
     <style>
       .page-loading {
