--- a/frontend/templates/frontend/resume/_base.html
+++ b/frontend/templates/frontend/resume/_base.html
@@ -21,9 +21,9 @@
     <link data-rh="true" rel="canonical" href="https://visualembassy.org">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <!-- Favicon and Touch Icons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'frontend/favicon/favicon-32x32.png' %}" />
+    {% comment %} <link rel="apple-touch-icon" sizes="180x180" href="{% static 'frontend/favicon/favicon-32x32.png' %}" />
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'frontend/favicon/favicon-32x32.png' %}" />
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'frontend/favicon/favicon-32x32.png' %}" />
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'frontend/favicon/favicon-32x32.png' %}" /> {% endcomment %}
     
     <meta data-rh="true" property="og:title" content="Visual Embassy">
     <meta data-rh="true" property="og:description" content="Magical Software">
@@ -96,17 +96,7 @@
       {% block main %} {% endblock main %}
     </main>
     <!-- Footer-->
-    {% block footer %} {% include "frontend/partials/_footer.html" %} {% endblock footer %}
-    <script src="{% static 'frontend/vendor/parallax-js/dist/parallax.min.js' %}"></script>
-    <script src="{% static 'frontend/vendor/aos/dist/aos.js' %}"></script>
-    <script src="{% static 'frontend/vendor/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'frontend/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js' %}"></script>
-    <script src="{% static 'frontend/vendor/nouislider/dist/nouislider.min.js' %}"></script>
-    <script src="{% static 'frontend/vendor/swiper/swiper-bundle.min.js' %}"></script>
-    <script src="{% static 'frontend/js/util.js' %}"></script>
-
     <!-- Main theme script-->
-    <script src="{% static 'frontend/js/theme.min.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </body>
