--- a/static/frontend/assets/css/custom/resume.rick.css
+++ b/static/frontend/assets/css/custom/resume.rick.css
@@ -712,6 +712,7 @@
   }
 
   /* .mobile-overlay {
+      background-image: url("../../img/wave-lines-01.svg");
       height: 50vh;
       width: 100%;
       padding: 0;
