--- a/frontend/static/frontend/assets/css/custom/resume.rick.css
+++ b/frontend/static/frontend/assets/css/custom/resume.rick.css
@@ -54,7 +54,7 @@
 
 @media all and (min-width: 992px) {
   .hp-search-btn {
-    font-size: 1.5rem !important;
+    font-size: 1rem !important;
   }
 
   .main-header-logo {
@@ -74,7 +74,8 @@
 }
 
 .hp-search-btn:hover {
-  color: #ff5e45 !important;
+  color: #fff !important;
+  background-color: #000;
 }
 
 .lrg-btn {
@@ -138,6 +139,12 @@
     background-position: 0px 0px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
     background-image: radial-gradient(49% 81% at 45% 47%, #ffffffff 0%, #073aff00 100%), conic-gradient(from 0deg at 17% -2%, #ffffffff 0%, #ff000000 99%),
       radial-gradient(142% 91% at 83% 7%, #ffffffdb 1%, #ff000000 99%), linear-gradient(0deg, #7e8affa3 -3%, #ff000000 99%), linear-gradient(344deg, #00ffff8c -7%, #00ffff8c 0%, #ffffff 100%);
+  }
+
+  .my-photo {
+    background-position: center !important;
+    background-size: 79% !important;
+    background-repeat: repeat;
   }
 
   .mod-content-signup small {
