--- a/frontend/templates/frontend/resume/_base.html
+++ b/frontend/templates/frontend/resume/_base.html
@@ -3,7 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Visual Embassy</title>
+    {% block site_title%}
+    {% endblock site_title%}
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
