--- a/frontend/templates/frontend/pages/index.html
+++ b/frontend/templates/frontend/pages/index.html
@@ -17,6 +17,7 @@
     />
     <meta name="author" content="Richard Alan Stokes" />
 
+    <script defer src="{% static "frontend/assets/js/theme-switcher.js"%}"></script>
     <!-- Webmanifest + Favicon / App icons -->
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'frontend/assets/img/favicon-32x32.png'%}">
     <link rel="icon" type="image/png" sizes="96x96" href="{% static 'frontend/assets/img/favicon-96x96.png'%}">
@@ -29,8 +30,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Theme switcher (color modes) -->
-
-    <script async src="{% static "frontend/assets/js/theme-switcher.js"%}"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 
     <!-- Import Google font (Inter) -->
@@ -91,6 +90,21 @@
         opacity: 0;
         visibility: hidden;
         z-index: 9999;
+      }
+
+      .usa-icon {
+        width: 100%;
+        max-width: 20px;
+        height: 20px;
+        background-image: url("{% static 'frontend/assets/img/icons/usa-flag-png-xl.jpeg'%}");
+        background-size: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        position: relative;
+        display: flex;
+        z-index: 99999999;
+        margin-left: 0.5rem;
+    
       }
       [data-bs-theme="dark"] .page-loading {
         background-color: #131517;
@@ -552,7 +566,7 @@
       <header data-bs-theme="dark">
         <div class="top-nav bg-dl">
           <div class="top-nav-container d-flex justify-content-center align-items-center py-1">
-            <p class="top-nav-text text-white text-small py-1 my-0" style="font-size: 0.85rem; font-weight: 600;">Get 50% Off Any Project Until July 4th</p>
+            <p class="top-nav-text text-white text-small py-1 my-0" style="font-size: 0.85rem; font-weight: 600;">Get 50% Off Any Project Until July 4th <span><div class="usa-icon"></div></span></p>
           </div>
         </div>
         <!-- Navbar. Remove 'fixed-top' class to make the navigation bar scrollable with the page -->
