resume page update

--- a/frontend/templates/frontend/resume/index.html
+++ b/frontend/templates/frontend/resume/index.html
@@ -111,9 +111,9 @@
     <div class="bg-size-cover bg-repeat-0 bg-position-center polygon-shape position-relative home-hero-image my-photo" style=""></div>
     <!-- Sign up form-->
     <div class="hp-hero-right d-flex align-items-center w-lg-50 min-vh-100 h-100 px-3 px-lg-5 pt-5">
-      <div class="w-100 pt-5 mx-auto" style="max-width: 763px;">
+      <div class="w-100 pt-0 mx-auto" style="max-width: 763px;">
         <h1 style="" class="fw-light text-dark hero-title-desktop">Richard Stokes</h1>
-        <p class="pb-3 mb-3 mb-lg-4"> Software Engineer | Data Engineer | Product Design</p>
+        <p class="pb-3 mb-3 mb-lg-4"> Software Engineer | Data Engineer | Product Designer</p>
         <p>
             Richard Stokes is a self-taught software engineer proficient in five distinct languages, personifying the prowess of autodidactic learning in technology. His expertise extends to leading substantial freelance developer teams, fostering a culture of excellence. As an entrepreneur, he's founded multiple significant tech companies, demonstrating his innovative drive. <br><br>
 
