resume page photo sample

--- a/frontend/templates/frontend/resume/index.html
+++ b/frontend/templates/frontend/resume/index.html
@@ -106,6 +106,7 @@
 </section>
 
 <section class="desktop">
+  <img style='width: 200px; height: 200px; display: none;' src="https://drive.google.com/file/d/1r3b-vBLSrn8eKM14oGH2qsaMpL00I3VB/view?usp=drive_link" alt="">
   <div class="d-lg-flex position-relative h-90 min-vh-100">
     <!-- Cover image-->
     <div class="bg-size-cover bg-position-center polygon-shape position-relative my-photo"></div>
