--- a/frontend/templates/frontend/pages/inform/index.html
+++ b/frontend/templates/frontend/pages/inform/index.html
@@ -1,4 +1,4 @@
-{% extends 'frontend/resume/_base.html' %}
+{% extends 'frontend/pages/resume/_base.html' %}
 {% load static %}
 {% block site_title%}
 <title> Coming Soon | Visual Embassy</title>
