--- a/frontend/templates/frontend/pages/index.html
+++ b/frontend/templates/frontend/pages/index.html
@@ -1,13 +1,11 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
   <!--Visual embassy website owned by CEO Richard Stokes-->
   <head>
     <meta charset="utf-8" />
-
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
-
     <!-- SEO meta tags -->
     <title>Visual Embassy</title>
     <meta name="description" content="Visual Embassy" />
