button and hero title font size change

--- a/frontend/templates/frontend/pages/index.html
+++ b/frontend/templates/frontend/pages/index.html
@@ -413,6 +413,10 @@
           width: 100%;
         }
 
+        .hero-cta-btn {
+          font-size: 1.25rem !important;
+        }
+
         .modal-content {
           padding-right: 8px;
           padding-left: 8px;
@@ -446,6 +450,13 @@
         .build-col {
           display: none!important;
         }
+      }
+
+      @media all and (max-width: 320px) {
+              
+      .hero-title {
+        font-size: 4rem !important;
+      }
       }
 </style>
 
